--- a/public/tms/tms-schedule-final.html
+++ b/public/tms/tms-schedule-final.html
@@ -92,6 +92,24 @@
             border-color: #4A90E2;
         }
 
+        .export-btn {
+            padding: 6px 14px;
+            border: none;
+            background-color: transparent;
+            border-radius: 4px;
+            font-size: 13px;
+            color: #666;
+            cursor: pointer;
+            transition: all 0.2s;
+            font-weight: 500;
+            min-width: 110px;
+        }
+
+        .export-btn:hover {
+            background-color: #e9ecef;
+            color: #333;
+        }
+
         .vehicle-select-wrapper {
             position: relative;
         }
@@ -176,6 +194,15 @@
             gap: 16px;
         }
 
+        .project-controls {
+            display: flex;
+            align-items: center;
+            gap: 4px;
+            background-color: #f1f3f5;
+            padding: 4px;
+            border-radius: 6px;
+        }
+
         .project-name-wrapper {
             display: flex;
             flex-direction: column;
@@ -196,9 +223,6 @@
         .view-toggle {
             display: flex;
             gap: 4px;
-            background-color: #f1f3f5;
-            padding: 4px;
-            border-radius: 6px;
         }
 
         .view-toggle-btn {
@@ -419,9 +443,14 @@
                         <div class="project-name">체리부로 - 진천 농장 A</div>
                         <div class="project-time">운행 시작: 06:00 | 예상 완료: 14:30</div>
                     </div>
-                    <div class="view-toggle" onclick="event.stopPropagation()">
-                        <button class="view-toggle-btn active" onclick="toggleView(1, 'table')">표보기</button>
-                        <button class="view-toggle-btn" onclick="toggleView(1, 'map')">지도보기</button>
+                    <div class="project-controls" onclick="event.stopPropagation()">
+                        <div class="view-toggle">
+                            <button class="view-toggle-btn active" onclick="toggleView(1, 'table')">표보기</button>
+                            <button class="view-toggle-btn" onclick="toggleView(1, 'map')">지도보기</button>
+                        </div>
+                        <button class="export-btn" type="button" onclick="event.stopPropagation()">
+                            엑셀로 내보내기
+                        </button>
                     </div>
                 </div>
                 <div class="vehicle-count">
@@ -544,9 +573,14 @@
                         <div class="project-name">체리부로 - 음성 농장 B</div>
                         <div class="project-time">운행 시작: 07:00 | 예상 완료: 15:00</div>
                     </div>
-                    <div class="view-toggle" onclick="event.stopPropagation()">
-                        <button class="view-toggle-btn active" onclick="toggleView(2, 'table')">표보기</button>
-                        <button class="view-toggle-btn" onclick="toggleView(2, 'map')">지도보기</button>
+                    <div class="project-controls" onclick="event.stopPropagation()">
+                        <div class="view-toggle">
+                            <button class="view-toggle-btn active" onclick="toggleView(2, 'table')">표보기</button>
+                            <button class="view-toggle-btn" onclick="toggleView(2, 'map')">지도보기</button>
+                        </div>
+                        <button class="export-btn" type="button" onclick="event.stopPropagation()">
+                            엑셀로 내보내기
+                        </button>
                     </div>
                 </div>
                 <div class="vehicle-count">
@@ -669,9 +703,14 @@
                         <div class="project-name">체리부로 - 청주 농장 C</div>
                         <div class="project-time">운행 시작: 13:00 | 예상 완료: 18:30</div>
                     </div>
-                    <div class="view-toggle" onclick="event.stopPropagation()">
-                        <button class="view-toggle-btn active" onclick="toggleView(3, 'table')">표보기</button>
-                        <button class="view-toggle-btn" onclick="toggleView(3, 'map')">지도보기</button>
+                    <div class="project-controls" onclick="event.stopPropagation()">
+                        <div class="view-toggle">
+                            <button class="view-toggle-btn active" onclick="toggleView(3, 'table')">표보기</button>
+                            <button class="view-toggle-btn" onclick="toggleView(3, 'map')">지도보기</button>
+                        </div>
+                        <button class="export-btn" type="button" onclick="event.stopPropagation()">
+                            엑셀로 내보내기
+                        </button>
                     </div>
                 </div>
                 <div class="vehicle-count">
