--- a/tms/tms-schedule-final.html
+++ b/tms/tms-schedule-final.html
@@ -419,7 +419,7 @@
             <div class="project-header" onclick="toggleProject(1)">
                 <div class="project-info">
                     <div class="project-name-wrapper">
-                        <div class="project-name">체리부로 - 진천 농장 A - 진천 도축장</div>
+                        <div class="project-name">(체리부로) 진천 농장 A - 진천 도축장</div>
                         <div class="project-time">운행 시작: 06:00 | 예상 완료: 14:30</div>
                     </div>
                     <div class="project-controls" onclick="event.stopPropagation()">
@@ -543,7 +543,7 @@
             <div class="project-header" onclick="toggleProject(2)">
                 <div class="project-info">
                     <div class="project-name-wrapper">
-                        <div class="project-name">체리부로 - 음성 농장 B - 음성 도축장</div>
+                        <div class="project-name">(체리부로) 음성 농장 B - 음성 도축장</div>
                         <div class="project-time">운행 시작: 07:00 | 예상 완료: 15:00</div>
                     </div>
                     <div class="project-controls" onclick="event.stopPropagation()">
@@ -667,7 +667,7 @@
             <div class="project-header" onclick="toggleProject(3)">
                 <div class="project-info">
                     <div class="project-name-wrapper">
-                        <div class="project-name">체리부로 - 청주 농장 C - 청주 도축장</div>
+                        <div class="project-name">(체리부로) 청주 농장 C - 청주 도축장</div>
                         <div class="project-time">운행 시작: 13:00 | 예상 완료: 18:30</div>
                     </div>
                     <div class="project-controls" onclick="event.stopPropagation()">
